
	* CMake/Modules/FindENet.cmake: Fixed ENet status always being set to
	"found".
	* src/configuration.cpp, src/utils/xml.h, src/resources/mapreader.cpp,
	src/resources/spritedef.cpp, src/resources/monsterdb.cpp,
	src/resources/itemdb.cpp, src/resources/equipmentdb.cpp: Added a macro
	for XML child node iterations to make the code more terse and easier
	to read.

2007-04-13  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* data/graphics/gui/CMakeLists.txt: Added target cursor graphics to
	the set of files to be installed.

2007-03-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Changed the order of network message handling and
	logic, in order to prevent an incoming character delete message from
	deleting the player character that was about to be drawn.
	* src/gui/char_select.cpp: Removed useless lock/unlock calls.
	* src/net/charserverhandler.cpp: Fixed crash since now logic is called
	after non-selected characters are deleted, by properly setting deleted
	instances to 0 and going back to initial selection.
	* src/gui/register.h, src/gui/register.cpp: Only enable Register
	button when all necessary fields are filled in.

2007-03-23  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tmw.cbp: Updated and fixed Code::Blocks project file.

2007-03-23  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/char_select.cpp, src/gui/inventorywindow.cpp,
	src/gui/ministatus.cpp, src/gui/ministatus.h, src/gui/skill.cpp,
	src/gui/skill.h, src/gui/status.cpp, src/gui/status.h,
	src/localplayer.cpp, src/localplayer.h, src/net/buysellhandler:
	Redesigned the localplayer class to use getters and setters instead of
	direct access to the member variables.
	* src/net/charserverhandler.cpp, src/net/playerhandler.cpp,
	src/net/protocol.h: Implemented communication of attributes between
	server and client.

2007-03-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/char_select.cpp, src/gui/char_select.h,
	src/net/charserverhandler.h, src/net/charserverhandler.cpp: Made sure