@@ -7,6 +7,8 @@
 	src/resources/itemdb.cpp, src/resources/equipmentdb.cpp: Added a macro
 	for XML child node iterations to make the code more terse and easier
 	to read.
+	* src/resources/itemdb.cpp: Made the parameter checks more terse and
+	manageable.
 
 2007-04-13  Björn Steinbrink  <B.Steinbrink@gmx.de>
 
